--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* font-family: 'Baloo Thambi 2', cursive; */
+  font-family: 'Istok Web', sans-serif;
+  /* font-family: 'Manjari', sans-serif; font-weight: 400; */
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  /* font-family: 'Baloo Thambi 2', cursive; */
+  font-family: 'Istok Web', sans-serif;
+  /* font-family: 'Manjari', sans-serif; font-weight: 400; */
 }
