add & show posts, head auth, load animation added

--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,8 +1,10 @@
 .custom-nav {
     background: #385898;
+    width: 100%;
 }
 
 .nav-row {
     background: transparent !important;
+    color: white !important;
     box-shadow: none;
 }
