--- a/src/components/css/NewsFeed.css
+++ b/src/components/css/NewsFeed.css
@@ -1,3 +1,23 @@
 .row {
     width: 100%;
 }
+
+.post-feed {
+    padding-top: 10px !important;
+    padding-bottom: 25px !important;
+    margin-top: -10px;
+    max-height: 635px;
+    overflow: auto;
+}
+
+.post-feed::-webkit-scrollbar {
+    width: 1px;
+    border-radius: 20px;
+    opacity: 0;
+}
+
+.post-feed::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0);
+    -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0);
+    opacity: 0;
+}
