--- a/src/components/css/Profile.css
+++ b/src/components/css/Profile.css
@@ -8,3 +8,46 @@
     border-radius: 30;
     overflow: 'hidden';
 }
+
+.loading {
+    position: relative;
+    background-color: #cdcdcd;
+}
+
+.loading::after {
+    display: block;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: translateX(-100%);
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255), transparent);
+    animation: loading 0.2s infinite;
+}
+
+@keyframes loading {
+    100% {
+        transform: translateX(100%);
+    }
+}
+
+.post-name.loading {
+    min-height: 20px;
+    max-height: 20px;
+    width: 75%;
+    border-radius: 5px;
+}
+
+.post-num.loading {
+    min-height: 15px;
+    max-height: 15px;
+    width: 50%;
+    border-radius: 5px;
+}
+
+.post-about.loading {
+    min-height: 40px;
+    max-height: 40px;
+    width: 70%;
+    border-radius: 5px;
+}
