--- a/src/components/css/AddPost.css
+++ b/src/components/css/AddPost.css
@@ -9,7 +9,7 @@
     height: 75px !important;
 }
 
-.custom-textArea:focus {
+/* .custom-textArea:focus {
     border:  1px solid #26a69a !important;
     box-shadow: 0 1px 0 0 #26a69a;
-}
+} */
