--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,10 +1,3 @@
-.custom-nav {
-    background: #385898;
-    width: 100%;
-}
-
-.nav-row {
-    background: transparent !important;
-    color: white !important;
-    box-shadow: none;
+.nav-custom {
+    background-color: #385898 !important;
 }
