--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,3 +1,11 @@
 .nav-custom {
     background-color: #385898 !important;
 }
+
+@media (max-width: 768px) {
+    .nav-custom {
+        position: fixed !important;
+        box-shadow: none !important;
+        margin-top: 5px;
+    }
+}
