--- a/src/components/css/NewsFeed.css
+++ b/src/components/css/NewsFeed.css
@@ -1,8 +1,5 @@
 .post-feed {
-    padding-top: 10px !important;
-    padding-bottom: 25px !important;
-    padding-left: 25px !important;
-    padding-right: 30px !important;
+    padding: 10px 30px 25px 25px !important;
     margin-top: -10px;
     overflow: auto;
 }
@@ -17,4 +14,44 @@
     box-shadow: inset 0 0 2px rgba(0, 0, 0, 0);
     -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0);
     opacity: 0;
+}
+
+.un-selected-tab {
+    background-color: transparent;
+}
+
+.selected-tab {
+    background-color: #d9d9d9;
+}
+
+.nav-icons {
+    position: fixed;
+    background-color: white;
+    margin-top: 75px;
+    z-index: 10;
+    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14),
+        0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+
+.web-toggle {
+    display: block;
+}
+.mobile-toggle {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .MuiGrid-item {
+        max-width: 100% !important;
+    }
+    .post-feed {
+        padding: 0 !important;
+        overflow: inherit;
+    }
+    .web-toggle {
+        display: none;
+    }
+    .mobile-toggle {
+        display: block;
+    }
 }
