--- a/src/components/css/SignIn.css
+++ b/src/components/css/SignIn.css
@@ -17,3 +17,9 @@
     text-decoration: underline;
     cursor: pointer;
 }
+
+@media (max-width: 768px) {
+    .home {
+        margin: 0px auto 20px auto;
+    }
+}
